--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/jquery.min.js"></script>
-  <link rel="Stylesheet" type="text/css" href="login.css"/>
-  <link rel="shortcut icon" url="cherry.png"/>
+  <link rel="Stylesheet" type="text/css" href="css/login.css"/>
+  <link rel="shortcut icon" url="srcimg/cherry.png"/>
         <br/>
 <h1><center><font style="font-family:Chopin Script, Arial;" color=black>:D</font></center></h1> 
   
